看了个示例

--- a/notebook/官方示例.ipynb
+++ b/notebook/官方示例.ipynb
@@ -148,6 +148,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'text': 'Albert Einstein was one of the greatest intellects of his time.',\n",
+       "   'loss_ids': 0,\n",
+       "   'shortenable_ids': 1},\n",
+       "  {'text': ' It was', 'loss_ids': 0, 'shortenable_ids': 0},\n",
+       "  {'text': '<mask>', 'loss_ids': 1, 'shortenable_ids': 0}],\n",
+       " {'guid': 0}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "promptTemplate.wrap_one_example(dataset[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tokenizing: 2it [00:00, 1977.98it/s]\n"
+      "tokenizing: 2it [00:00, 1961.33it/s]\n"
      ]
     }
    ],
@@ -222,7 +247,44 @@
     "    tokenizer=tokenizer,\n",
     "    template=promptTemplate,\n",
     "    tokenizer_wrapper_class=WrapperClass,\n",
+    "    max_seq_length=32,\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"input_ids\": [[101, 3986, 16127, 1108, 1141, 1104, 1103, 4459, 1107, 7854, 18465, 1116, 1104, 1117, 1159, 119, 1135, 1108, 103, 102, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], \"inputs_embeds\": null, \"attention_mask\": [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], \"token_type_ids\": null, \"label\": null, \"decoder_input_ids\": null, \"decoder_inputs_embeds\": null, \"soft_token_ids\": null, \"past_key_values\": null, \"loss_ids\": [[-100, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, -100, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], \"guid\": [0], \"tgt_text\": null, \"encoded_tgt_text\": null, \"input_ids_len\": null}\n",
+      "\n",
+      "input_ids torch.Size([1, 32]) tensor([[  101,  3986, 16127,  1108,  1141,  1104,  1103,  4459,  1107,  7854,\n",
+      "         18465,  1116,  1104,  1117,  1159,   119,  1135,  1108,   103,   102,\n",
+      "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+      "             0,     0]])\n",
+      "attention_mask torch.Size([1, 32]) tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0]])\n",
+      "loss_ids torch.Size([1, 32]) tensor([[-100,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "            0,    0,    0,    0,    0,    0,    1, -100,    0,    0,    0,    0,\n",
+      "            0,    0,    0,    0,    0,    0,    0,    0]])\n",
+      "guid torch.Size([1]) tensor([0])\n",
+      "['[CLS]', 'Albert', 'Einstein', 'was', 'one', 'of', 'the', 'greatest', 'in', '##tel', '##lect', '##s', 'of', 'his', 'time', '.', 'It', 'was', '[MASK]', '[SEP]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]', '[PAD]']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint(next(iter(data_loader)))\n",
+    "example = next(iter(data_loader))\n",
+    "\n",
+    "for key, val in example.items():\n",
+    "    print(key, val.shape, val)\n",
+    "\n",
+    "print(tokenizer.convert_ids_to_tokens(example[\"input_ids\"][0]))"
    ]
   },
   {
