--- a/notebook/官方示例.ipynb
+++ b/notebook/官方示例.ipynb
@@ -10,7 +10,7 @@
     "import json\n",
     "import sys\n",
     "\n",
-    "sys.path.append(\"../\")\n"
+    "sys.path.append(\"../\")"
    ]
   },
   {
